--- a/assets/css/responsive/mobile.css
+++ b/assets/css/responsive/mobile.css
@@ -2,7 +2,7 @@
    BrandRadar Mobile – Entry File
    ===================================================== */
 
-@import url("./mobile/_base.css");
+@import url("./mobile/mobile-base.css");
 @import url("./mobile/header.css");
 @import url("./mobile/drawer.css");
 @import url("./mobile/tiles.css");
